1.19.4 - 1.4.1: Ported to Minecraft 1.19.4